// Vitest Snapshot v1

exports[`parse -1+2*6/3+5 1`] = `
{
  "left": {
    "left": {
      "operator": "-",
      "right": {
        "type": "value",
        "value": "1",
      },
      "type": "unary",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "*",
        "right": {
          "type": "value",
          "value": "6",
        },
        "type": "binary",
      },
      "operator": "/",
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "+",
  "right": {
    "type": "value",
    "value": "5",
  },
  "type": "binary",
}
`;

exports[`parse 1 + 2^3^4*5-6 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "^",
        "right": {
          "left": {
            "type": "value",
            "value": "3",
          },
          "operator": "^",
          "right": {
            "type": "value",
            "value": "4",
          },
          "type": "binary",
        },
        "type": "binary",
      },
      "operator": "*",
      "right": {
        "type": "value",
        "value": "5",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "type": "value",
    "value": "6",
  },
  "type": "binary",
}
`;
